--- a/src/geometry.html
+++ b/src/geometry.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1><a href="index.html" class="golovna">На головну</a></h1>
     <ul class="geometry-list">
-        <li></li>
-        <li></li>
-        <li></li>
+        <li class="geometry-item">
+            <p>Ко́ло — це геометричне місце точок площини, відстань від <br> яких до заданої точки, що називається
+                центром
+                кола, <br> є сталою величиною і дорівнює радіусу кола. Коло <br> є найпростішою замкненою фігурою.
+                Простіше
+                визначення: <br> коло — це замкнена крива, всі точки якої рівновіддалені <br> від однієї, яка є центром
+                кола.
+                Частина площини, <br> обмежена колом, — це круг.</p>
+            <img width="250px" height="250px"
+                src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Geometri_cirkel.png" alt="">
+        </li>
+        <li class="geometry-item">
+            <img width="300px" height="250px"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Triangle_illustration.svg/330px-Triangle_illustration.svg.png"
+                alt="">
+            <p>Трикyтник в евклідовій геометрії — геометрична фігура, <br> яка складається з трьох точок, що не лежать
+                на <br>
+                одній прямій, і трьох відрізків, які їх сполучають. <br> Трикутник є многокутником і 2-симплексом. В
+                евклідовій <br> геометрії трикутник однозначно задає площину. <br> Всі трикутники двовимірні.</p>
+        </li>
+        <li class="geometry-item">
+            <p>Чотирикутник — це частина площини, обмежена простою <br> замкненою ламаною, яка містить чотири (4) ланки. Вона <br>
+                складається з чотирьох (4) вершин (точок) і чотирьох <br> сторін (відрізків), що послідовно їх сполучають. <br>
+                При цьому жодні три з даних точок не повинні <br> лежати на одній прямій. Вершини чотирикутника <br> називаються
+                сусідніми, якщо вони є кінцями однієї <br> з його сторін. Несусідні вершини називаються протилежними. <br>
+                Відрізки, що сполучають протилежні вершини <br> чотирикутника, називаються діагоналями.</p>
+            <img width="300px" height="250px" src="https://upload.wikimedia.org/wikipedia/commons/3/36/Chotyrykutnyk-Geom.png" alt="">
+        </li>
     </ul>
 </body>
+
 </html>
